--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,7 @@ layout: base
 
       <article role="main" class="blog-post">
         {{ content }}
+        {% include ads.html %}
       </article>
 
       {% if page.tags.size > 0 %}
