--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,16 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include head.html %}
+
+  <!-- Google Ads -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-5214277715351322",
+          enable_page_level_ads: true
+     });
+</script>
+  
 </head>
 
 <body id="post" {% if page.image.feature %}class="feature"{% endif %}>
