--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,17 @@
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Normal Ads -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-5214277715351322"
+           data-ad-slot="1509398698"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div><!-- /.entry-content -->
     {% include author.html %}
     {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
