--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -222,7 +222,8 @@ layout: base
           </div>
         {%- endif -%}
         </div>
-
+        
+        <center>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Normal Ads -->
         <ins class="adsbygoogle"
@@ -234,6 +235,7 @@ layout: base
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
+        </center>
 
         {%- if _footer != false -%}
           <div class="page__footer d-print-none">{%- include footer.html -%}</div>
