--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,6 @@
 {%- assign _sources = __return -%}
 <link rel="stylesheet" href="{{ _sources.font_awesome }}" >
 
+{% seo %}
+
 {%- include head/custom.html -%}
